--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "openai>=1.70.0",
+    "pdf2image>=1.17.0",
+    "pillow>=11.2.0",
+    "pytest>=8.3.5",
+    "python-dotenv>=1.1.0",
+    "rich>=14.0.0",
+]
