--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "pillow>=11.2.0",
     "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.2",
     "rich>=14.0.0",
 ]
