--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
+    "requests>=2.32.3",
     "rich>=14.0.0",
 ]
