--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "elasticsearch==8.12.0",
     "openai>=1.70.0",
     "pdf2image>=1.17.0",
     "pillow>=11.2.0",
