--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "elasticsearch==8.12.0",
+    "google-genai>=1.14.0",
     "openai>=1.70.0",
     "pdf2image>=1.17.0",
     "pillow>=11.2.0",
