--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "anthropic>=0.51.0",
     "elasticsearch==8.12.0",
     "google-genai>=1.14.0",
     "openai>=1.70.0",
