fast API setup complete

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.51.0",
     "elasticsearch==8.12.0",
+    "fastapi>=0.115.12",
     "google-genai>=1.14.0",
     "openai>=1.70.0",
     "pdf2image>=1.17.0",
@@ -16,4 +17,5 @@ dependencies = [
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "rich>=14.0.0",
+    "uvicorn>=0.34.2",
 ]
