--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "anthropic>=0.51.0",
+    "baml-py>=0.90.2",
     "elasticsearch==8.12.0",
     "fastapi>=0.115.12",
     "google-genai>=1.14.0",
