--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "elasticsearch==8.12.0",
     "fastapi>=0.115.12",
     "google-genai>=1.14.0",
+    "instructor>=1.11.3",
     "openai>=1.70.0",
     "pdf2image>=1.17.0",
     "pillow>=11.2.0",
@@ -20,3 +21,16 @@ dependencies = [
     "rich>=14.0.0",
     "uvicorn>=0.34.2",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "ty>=0.0.1a24",
+]
+
+[tool.ty.environment]
+# Multiple directories (priority order)
+root = ["./src"]
