--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ dependencies = [
     "fastapi>=0.115.12",
     "google-genai>=1.14.0",
     "instructor>=1.11.3",
+    "lancedb>=0.25.3",
     "openai>=1.70.0",
     "pdf2image>=1.17.0",
     "pillow>=11.2.0",
+    "polars>=1.35.2",
     "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
@@ -28,6 +30,7 @@ build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
+    "py-spy>=0.4.1",
     "pytest-cov>=7.0.0",
     "ty>=0.0.1a24",
 ]
