--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "rich>=14.0.0",
+    "tiktoken>=0.12.0",
     "uvicorn>=0.34.2",
 ]
 
