--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [dependency-groups]
 dev = [
     "py-spy>=0.4.1",
