further improvements to backend packaging
a python project expects modules within src/ and I did not have it set up like that before. now imports and builds will be better

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "journal-ocr"
+name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Journal OCR backend API"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
