--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "py-spy>=0.4.1",
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
+    "pytest-sugar>=1.1.1",
     "ty>=0.0.1a24",
 ]
 
