--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,3 +44,7 @@ dev = [
 [tool.ty.environment]
 # Multiple directories (priority order)
 root = ["./src", "./src/core", "./src/pipeline", "./src/backend"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
